# docs/swagger.json
@@ -1115,14 +1115,14 @@
         },
         "/api/email_login": {
             "post": {
-                "description": "邮箱登录",
+                "description": "邮箱登录，返回token",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "用户管理"
                 ],
-                "summary": "邮箱登录",
+                "summary": "邮箱登录，返回token",
                 "parameters": [
                     {
                         "description": "表示多个参数",
@@ -2471,6 +2471,83 @@
                 }
             }
         },
+        "/api/user_info": {
+            "get": {
+                "description": "用户信息",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户管理"
+                ],
+                "summary": "用户信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/res.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.UserModel"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "用户修改当前登陆人信息",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户管理"
+                ],
+                "summary": "用户修改当前登陆人信息",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "昵称，签名，链接，头像",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user_api.UserUpdateNicknameRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users": {
             "get": {
                 "description": "用户列表",
@@ -3679,8 +3756,16 @@
                 "id": {
                     "type": "integer"
                 },
+                "integral": {
+                    "description": "积分",
+                    "type": "integer"
+                },
                 "ip": {
                     "description": "ip地址",
+                    "type": "string"
+                },
+                "link": {
+                    "description": "链接地址",
                     "type": "string"
                 },
                 "nick_name": {
@@ -3694,6 +3779,10 @@
                             "$ref": "#/definitions/ctype.Role"
                         }
                     ]
+                },
+                "sign": {
+                    "description": "签名",
+                    "type": "string"
                 },
                 "sign_status": {
                     "description": "注册来源",
@@ -4065,8 +4154,16 @@
                 "id": {
                     "type": "integer"
                 },
+                "integral": {
+                    "description": "积分",
+                    "type": "integer"
+                },
                 "ip": {
                     "description": "ip地址",
+                    "type": "string"
+                },
+                "link": {
+                    "description": "链接地址",
                     "type": "string"
                 },
                 "nick_name": {
@@ -4083,6 +4180,10 @@
                 },
                 "role_id": {
                     "type": "integer"
+                },
+                "sign": {
+                    "description": "签名",
+                    "type": "string"
                 },
                 "sign_status": {
                     "description": "注册来源",
@@ -4132,6 +4233,23 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "user_api.UserUpdateNicknameRequest": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "nick_name": {
+                    "type": "string"
+                },
+                "sign": {
+                    "type": "string"
                 }
             }
         }
