# routers/user_router.go
@@ -21,5 +21,6 @@ func (router RouterGroup) UserRouter() {
 	router.POST("logout", middleware.JwtAuth(), app.LogoutView)
 	router.DELETE("users", middleware.JwtAdmin(), app.UserRemove)
 	router.POST("user_bind_email", middleware.JwtAuth(), app.UserBindEmailView)
-	router.POST("user_info", middleware.JwtAuth(), app.UserInfoView)
+	router.GET("user_info", middleware.JwtAuth(), app.UserInfoView)
+	router.PUT("user_info", middleware.JwtAuth(), app.UserUpdateNickName)
 }
